--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A tool that crops images to certain sizes",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": ""
   },
   "keywords": [
     "image",
@@ -12,5 +12,19 @@
   ],
   "author": "Ben Lowbridge",
   "license": "ISC",
-  "devDependencies": {}
+  "devDependencies": {
+    "asar": "^0.12.4",
+    "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "gulp": "^3.9.1",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
+    "webpack": "^3.2.0",
+    "webpack-stream": "^3.2.0"
+  },
+  "dependencies": {
+    "bootstrap.native": "^2.0.12",
+    "cropper": "^3.0.0-rc.3",
+    "jquery": "^3.2.1"
+  }
 }
