--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "asar": "^0.12.4",
+    "browser-sync": "^2.18.13",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "gulp": "^3.9.1",
